--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,20 @@
-APP_NAME=Laravel
+APP_NAME="TODO App"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:a68rtWl/KTLkVt9vgxNEuexxta5zQ6w6TCt0pZTzih4=
 APP_DEBUG=true
 APP_URL=http://localhost
+
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=todo
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -56,3 +57,4 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_API_URL=http://todo-app.test
