feat: adição do WWWGROUP

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ DB_DATABASE=todo
 DB_USERNAME=sail
 DB_PASSWORD=password
 
+WWWGROUP=1000
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
